SNAPPY HEX MESH + comparison of the different meshes

--- a/Report.tex
+++ b/Report.tex
@@ -24,10 +24,10 @@
 \pagenumbering{arabic}
 
 \newpage\input{./sections/Introduction}
-\newpage\input{./sections/Case}
-\newpage\input{./sections/Preprocess}
-\newpage\input{./sections/problem}
-\newpage\input{./sections/simulation}
+\newpage\input{./sections/Case} %INCLUDES CASE+HYPOTHESES
+\newpage\input{./sections/Preprocess} %INCLUDES mesh,control,properties and ?
+\newpage\input{./sections/simulation} %to do!
+\newpage\input{./sections/postprocess} %to do!
 
 
 % BIBLIOGRAPHY
