--- a/sections/Preprocess.tex
+++ b/sections/Preprocess.tex
@@ -1,7 +1,7 @@
 \section{Pre-processing}
 
-\input{./sections/Mesh}
-\input{./sections/Boundaryconditions}
-\input{./sections/Transportproperties}
-\input{./sections/Rotation}
-\input{./sections/Control}
+\input{./sections/Mesh} 
+\newpage\input{./sections/Boundaryconditions}
+\newpage\input{./sections/Transportproperties}
+\newpage\input{./sections/Rotation}
+\newpage\input{./sections/Control}
