--- a/sections/Boundaryconditions.tex
+++ b/sections/Boundaryconditions.tex
@@ -3,7 +3,7 @@
 The known initial values of the the pressure and the velocity have to be defined in the program to carry out the simulation.
 
 \paragraph{}
-We consider that the velocity at the output of the mesh, in the direction X, is $30 m/s$. To change this parameter, we have to modify the file \textbf{0.orig/U}.
+We consider that the velocity at the output of the mesh, in the direction $X$, is $30 m/s$. To change this parameter, we have to modify the file \textbf{0.orig/U}.
 
 
 \begin{footnotesize}
