--- a/sections/Preprocess.tex
+++ b/sections/Preprocess.tex
@@ -5,3 +5,6 @@
 \newpage\input{./sections/Transportproperties}
 \newpage\input{./sections/Rotation}
 \newpage\input{./sections/Control}
+\newpage\input{./sections/SchemesandSolution}
+\newpage\input{./sections/Runapplication}
+
