--- a/sections/Transportproperties.tex
+++ b/sections/Transportproperties.tex
@@ -1,6 +1,6 @@
 \subsection{Properties}
 \paragraph{}
-The properties of the flow have to be defined as explained in the hypothesis section. The \textit{transportModel}is Newtonian and the  kinematic viscosity \textit{nu} is $1.5e-05 m^2/s$ .
+The properties of the flow have to be defined as explained in the hypothesis section. The \textit{transportModel} is Newtonian and the  kinematic viscosity \textit{nu} ($\nu$) is $1.5e^{-5} m^2/s$ .
 
 \paragraph{}
 To change all these parameters, we have to modify the file \textbf{constant/transportProperties}.
@@ -33,7 +33,7 @@ nu              [0 2 -1 0 0 0 0] 1.5e-05;
 \end{footnotesize}
 
 \paragraph{}
-Another hypothesus made have been that the flow of the simulation is laminar. To impose this hypothesis \textit{simulationType} is laminar.
+Another hypothesis made have been that the flow of the simulation is laminar. To impose this hypothesis we have to write laminar in \textit{simulationType}.
 
 \paragraph{}
 To change all these parameters, we have to modify the file \textbf{constant/turbulenceProperties}.
