--- a/Report.tex
+++ b/Report.tex
@@ -6,7 +6,7 @@
 
 \input{doc_config/config} % Document Configurations
 \input{doc_config/doc_info} % Document Configurations
-\input{doc_config/defined_stuff}
+\input{doc_config/defined_stuff} %Do not edit!
 
 \begin{document}
 
