--- a/sections/mesh.tex
+++ b/sections/mesh.tex
@@ -455,3 +455,36 @@ geometry
 \caption{Detail of the dense mesh}
 \label{dense3}
 \end{figure}
+
+\paragraph{}To end with this section, the \textit{log} file that has been obtained when the mesh has been defined with the \textit{snappyHexMesh} utility is presented below. It has to be taken into account that it is a huge file since the number of iterations is really big and only the final part of the \textit{log} file is shown.
+
+\begin{footnotesize}
+\begin{verbatim}
+Snapped mesh : cells:1626270  faces:5479413  points:2344680
+Cells per refinement level:
+    0	8592
+    1	24456
+    2	126790
+    3	918976
+    4	299109
+    5	118950
+    6	129397
+Writing mesh to time constant
+Wrote mesh in = 97.48 s.
+Mesh snapped in = 1121.77 s.
+Checking final mesh ...
+Checking faces in error :
+    non-orthogonality > 65  degrees                        : 0
+    faces with face pyramid volume < 1e-13                 : 0
+    faces with face-decomposition tet quality < 1e-15      : 0
+    faces with concavity > 80  degrees                     : 0
+    faces with skewness > 4   (internal) or 20  (boundary) : 0
+    faces with interpolation weights (0..1)  < 0.05        : 0
+    faces with volume ratio of neighbour cells < 0.01      : 0
+    faces with face twist < 0.02                           : 0
+    faces on cells with determinant < 0.001                : 0
+Finished meshing without any errors
+Finished meshing in = 1705 s.
+End
+\end{verbatim}
+\end{footnotesize}
