transport properties + controldict

--- a/sections/Control.tex
+++ b/sections/Control.tex
@@ -1,10 +1,50 @@
-\subsection{Control}
-\paragraph{}
-First of all, the initial and final times of the simulation have to be defined. In our case, the \textit{startTime} is 0 s and the \textit{endTime} is 20 s. After this, the time step fot he simulation have to be defined. We are interested on simulate each second of the simulation but we want that the programm provides us the simulation data each 5 seconds, therefore the \textit{deltaT} is 1 s and the \textit{writeInterval} is 5 s.
+\subsection{ControlDict}
+\paragraph{}This file is really important for the simulation since it contains the timesteps that it will pursue. So, to begin, the initial and final times of the simulation have to be defined. In this case, the \textit{startTime} is 0s and the \textit{endTime} has been set to 20 s. No more simulation time is needed since it has been assumed that the flow is stationary. These changes can be made in the \textit{system/controlDict} file.
 
-\paragraph{}
-To change all these parameters, we have to modify the file \textbf{system/controlDict}.
+\paragraph{}\textbf{NOTA: DEPEN DEL SOLVER! Si no fem servir SIMPLEFOAM s'he de tornar a COPIAR!}
 
+\begin{footnotesize}
+\begin{verbatim}
+application     simpleFoam;
+
+startFrom       latestTime;
+
+startTime       0;
+
+stopAt          endTime;
+
+endTime         20;
+
+
+\end{verbatim}
+\end{footnotesize}
+
+\paragraph{}The next thing that has to be done is to define the time step for the simulation as well as the write interval (this is; the number of time that must pass in order to make a file for the simulation in the current simulation time). 
+
+\begin{footnotesize}
+\begin{verbatim}
+deltaT          1;
+
+writeControl    timeStep;
+
+writeInterval   5;
+
+purgeWrite      0;
+
+writeFormat     binary;
+
+writePrecision  6;
+
+writeCompression uncompressed;
+
+timeFormat      general;
+
+timePrecision   6;
+
+\end{verbatim}
+\end{footnotesize}
+
+\paragraph{}Since it is really clear what the other variables do, they will not be explained here. Finally, the file that has been used to run the simulation is presented below.
 
 \begin{footnotesize}
 \begin{verbatim}
