--- a/sections/Transportproperties.tex
+++ b/sections/Transportproperties.tex
@@ -1,4 +1,4 @@
-\subsection{Properties}
+\subsection{Properties of the flow}
 \paragraph{}The properties of the flow have to be defined taking into account the hypotheses made for the case. Given that the flow is air, the kinematic viscosity \textit{nu} ($\nu$) is $1.5e^{-5} m^2/s$. Also, as mentioned previously, the simulation will work with a Newtonian flow and this has to be defined here as well.
 
 \paragraph{}To change all these flow parameters and properties, the \textit{constant/transportProperties} file has to be modified as follows. There is no need to dedicate more time to this file since everything is really clear within it.
