--- a/Report.tex
+++ b/Report.tex
@@ -42,7 +42,8 @@
 %	siam    : [#] Initial. Surname (sc)
 %	unsrt   : [#] Name Surname
 
-%\bibliographystyle{unsrt}
-%\bibliography{bibliography}
+\bibliographystyle{unsrt}
+\nocite{*} %Do not need to cite the references!!!
+\bibliography{./ref/bibliography}
 
 \end{document}
