--- a/ref/bibliography.bib
+++ b/ref/bibliography.bib
@@ -1,8 +1,9 @@
-@article{Petit2011,
-author = {Petit, Olivier},
-file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/mesh{\_}generation{\_}2013{\_}OP.pdf:pdf},
-title = {{mesh generation . Different ways of creating the mesh . Outline}},
-year = {2011}
+@article{Paterson2010,
+author = {Paterson, Eric},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/icoFoamWalkThrough.pdf:pdf},
+number = {April},
+title = {{PENN STATE The icoFoam “ Cavity Tutorial ”}},
+year = {2010}
 }
 @article{Nozaki9240,
 author = {Nozaki, Fumiya},
@@ -10,6 +11,12 @@ file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quad
 number = {May},
 title = {{CFD for Rotating Machinery}},
 year = {9240}
+}
+@article{Petit2011,
+author = {Petit, Olivier},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/mesh{\_}generation{\_}2013{\_}OP.pdf:pdf},
+title = {{mesh generation . Different ways of creating the mesh . Outline}},
+year = {2011}
 }
 @article{Pieri2014,
 author = {Pieri, Roberto},
