changes to the bibliography :alien:

--- a/ref/bibliography.bib
+++ b/ref/bibliography.bib
@@ -1,16 +1,16 @@
-@article{Paterson2010,
-author = {Paterson, Eric},
-file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/icoFoamWalkThrough.pdf:pdf},
-number = {April},
-title = {{PENN STATE The icoFoam “ Cavity Tutorial ”}},
-year = {2010}
-}
 @article{Nozaki9240,
 author = {Nozaki, Fumiya},
 file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/openfoamrotatinggeometryenglish20140518-140517222323-phpapp01.pdf:pdf},
 number = {May},
 title = {{CFD for Rotating Machinery}},
 year = {9240}
+}
+@article{Paterson2010,
+author = {Paterson, Eric},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/icoFoamWalkThrough.pdf:pdf},
+number = {April},
+title = {{PENN STATE The icoFoam “ Cavity Tutorial ”}},
+year = {2010}
 }
 @article{Petit2011,
 author = {Petit, Olivier},
@@ -23,5 +23,11 @@ author = {Pieri, Roberto},
 file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/snappyHexMesh.pdf:pdf},
 number = {June},
 title = {{A tool for pre-processing : snappyHexMesh}},
+year = {2014}
+}
+@article{Casacuberta2014,
+author = {Casacuberta, Jordi},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/beginnersGuideOF.pdf:pdf},
+title = {{Study of fluid dynamics applications in the field of engineering by using OpenFOAM}},
 year = {2014}
 }
