--- a/ref/bibliography.bib
+++ b/ref/bibliography.bib
@@ -1,3 +1,9 @@
+@article{Casacuberta2014,
+author = {Casacuberta, Jordi},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/beginnersGuideOF.pdf:pdf},
+title = {{Study of fluid dynamics applications in the field of engineering by using OpenFOAM}},
+year = {2014}
+}
 @article{Nozaki9240,
 author = {Nozaki, Fumiya},
 file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/openfoamrotatinggeometryenglish20140518-140517222323-phpapp01.pdf:pdf},
@@ -25,9 +31,9 @@ number = {June},
 title = {{A tool for pre-processing : snappyHexMesh}},
 year = {2014}
 }
-@article{Casacuberta2014,
-author = {Casacuberta, Jordi},
-file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/beginnersGuideOF.pdf:pdf},
-title = {{Study of fluid dynamics applications in the field of engineering by using OpenFOAM}},
-year = {2014}
+@article{Feedback,
+author = {Feedback, Learner},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/module5.pdf:pdf},
+pages = {45--54},
+title = {{Running in parallel}}
 }
