new references :mierdor:

--- a/ref/bibliography.bib
+++ b/ref/bibliography.bib
@@ -4,6 +4,12 @@ file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quad
 title = {{Study of fluid dynamics applications in the field of engineering by using OpenFOAM}},
 year = {2014}
 }
+@article{Feedback,
+author = {Feedback, Learner},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/module5.pdf:pdf},
+pages = {45--54},
+title = {{Running in parallel}}
+}
 @article{Nozaki9240,
 author = {Nozaki, Fumiya},
 file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/openfoamrotatinggeometryenglish20140518-140517222323-phpapp01.pdf:pdf},
@@ -21,7 +27,7 @@ year = {2010}
 @article{Petit2011,
 author = {Petit, Olivier},
 file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/mesh{\_}generation{\_}2013{\_}OP.pdf:pdf},
-title = {{mesh generation . Different ways of creating the mesh . Outline}},
+title = {{Mesh generation: different ways of creating the mesh.}},
 year = {2011}
 }
 @article{Pieri2014,
@@ -31,9 +37,12 @@ number = {June},
 title = {{A tool for pre-processing : snappyHexMesh}},
 year = {2014}
 }
-@article{Feedback,
-author = {Feedback, Learner},
-file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/module5.pdf:pdf},
-pages = {45--54},
-title = {{Running in parallel}}
+@article{Rygg2013,
+author = {Rygg, Jone Rivrud},
+file = {:Users/davidmoratacarranza/Google Drive/UNIVERSITAT/4- QUART/Primer Quadrimestre/OpenSource CFD Optativa/Informe/elbicfdo/ref/work.pdf:pdf},
+journal = {Thesis},
+number = {June},
+pages = {119},
+title = {{CFD Analysis of a Pelton Turbine in OpenFOAM}},
+year = {2013}
 }
