--- a/doc_config/config.tex
+++ b/doc_config/config.tex
@@ -133,6 +133,8 @@
 \usepackage{etoolbox}
 \usepackage{lscape}
 \usepackage{verbatim}
+\usepackage{esvect}
+
 
 %   - NOTES
 % (1) LaTeX implements a style that doesn't indent the first paragraph after a section heading. There are coherent reasons for this. Some typography rules state that first indent should be suppressed only after a centered title and that all other paragraphs must be indented.
