--- a/sections/solver.tex
+++ b/sections/solver.tex
@@ -1,3 +1,13 @@
 \subsection{Selection of the solver}
 
-\paragraph{}\textbf{SOLVER!!!!}
+\paragraph{}This solver used has been designed to work with non compressible flows, specifically. It solves the Navier Stokes equations for a given incompressible flow in steady-state conditions.
+
+\begin{equation}
+\nabla \vec{u} = 0
+\end{equation}
+
+\begin{equation}
+\frac{\partial \vec{u}}{\partial t} + \vec{u} (\nabla \vec{u}) = \nu \nabla^2 \vec{u} - \nabla p + \vec{g}
+\end{equation}
+
+\paragraph{}\textbf{NO SE QUE ESCRIBO...TENGO SUEÑO}
