changes in mesh

--- a/sections/mesh.tex
+++ b/sections/mesh.tex
@@ -2,7 +2,7 @@
 
 \subsubsection{Selection of the tutorial}
 
-\paragraph{}The first thing that needs to be done is the selection of the tutorial that will work as a base to run the simulation of the case. Among all the tutorials that can be found on the \textit{OpenFOAM} folder, we have selected the \textbf{FALTA!} for several reasons.
+\paragraph{}The selection of the tutorial case is the first thing that needs to be done to run the simulation of the case since all the files are linked and starting a new case would mean spending a lot of time creating files and establishing all these links in order to make \textit{OpenFOAM} run. Among all the tutorials that can be found on the \textit{OpenFOAM} folder, we have selected the \textbf{FALTA!} for several reasons.
 
 \subsubsection{blockMesh}
 
