Cambios :pingas: :pingas:

--- a/sections/Rotation.tex
+++ b/sections/Rotation.tex
@@ -1,7 +1,7 @@
 \subsection{Rotation}
 \paragraph{}An important consideration for this project is that the rotor is spinning at a high speed and this condition has to be somehow communicated to \textit{OpenFOAM}. To work with this condition the Multiple Frame Reference (MFR) method has to be used. The method itself is based on adding a 'source' to the momentum equation in a previously defined zone named 'rotor'. How to do that has been shown in the previous section.
 
-\paragraph{}The \textbf{constant/MRFProperties} file has to be modified with the appropriate parameters for the case. Since the axis of \textit{OpenFOAM} are based on the right hand rule, the rotation axis must be defined as follows: \textbf{CAMBIAR PER ARA!} $(1,0,0)$. From information that can be found only, it has been chosen 5000 $rpm$ as the angular velocity of the rotor. It should be noted that the units used must be those of the International System, so the 5000 $rpm$ must be converted to $rad/s$. Furthermore, an origin point has to be indicated in the axis of rotation; in this case, the origin point is as follows: $(0 1.1675354 1.15542633)$. 
+\paragraph{}The \textbf{constant/MRFProperties} file has to be modified with the appropriate parameters for the case. Since the axis of \textit{OpenFOAM} are based on the right hand rule, the rotation axis must be defined as follows: \textbf{CAMBIAR PER ARA!} $(1,0,0)$. From information that can be found only, it has been chosen 5000 $rpm$ as the angular velocity of the rotor. It should be noted that the units used must be those of the International System, so the 5000 $rpm$ must be converted to $rad/s$. Furthermore, an origin point has to be indicated in the axis of rotation; in this case, the origin point is as follows: \texttt{(0 1.1675354 1.15542633)}. 
 
 \paragraph{}Finally, it has to be indicated wheter some geometries are rotating or not. Thus, the next parameter has to be modified:
 
